# RAG_Document_Project

./: pyproject.toml  requirements.txt
ragbase/: config.py  model.py
