[tool.poetry]
name = "ragbase"
version = "0.1.1"
description = ""
authors = ["Venelin Valkov <venelin@curiousily.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
langchain-community = "^0.2.12"
flashrank = "^0.2.9"
qdrant-client = "^1.11.0"
pypdfium2 = "^4.30.0"
fastembed = "^0.3.4"
langchain-experimental = "^0.0.64"
langchain-qdrant = "^0.1.3"
streamlit = "^1.37.1"
python-dotenv = "^1.0.1"
langchain-groq = "^0.1.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
jupyterlab = "^4.2.4"
watchdog = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
